force-app/main/default/objects/EK_Sales360_Cache__c/EK_Sales360_Cache__c.object-meta.xml
<CustomObject>
    <description>Two-layer cache storage for Sales360 AI-generated insights. Stores JSON output of Prompt Template invocations keyed by user, period, and response type.</description>
    <label>EK Sales360 Cache</label>
    <nameField>
        <label>Cache Key</label>
        <length>80</length>
        <type>Text</type>
    </nameField>
    <pluralLabel>EK Sales360 Cache Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>