force-app/main/default/objects/EK_Sales360_Cache__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>When this cache entry expires. After this time, the entry is treated as stale.</description>
    <label>Expires At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>