force-app/main/default/objects/EK_Sales360_Cache__c/fields/Fiscal_Period__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Period__c</fullName>
    <description>The fiscal period in format FYYYQQ (e.g., FY26Q1) or special values like FY26 (full year), LAST12MONTHS.</description>
    <label>Fiscal Period</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>