force-app/main/default/objects/EK_Sales360_Cache__c/fields/Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Generated_At__c</fullName>
    <description>When this cache entry was written.</description>
    <label>Generated At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>