force-app/main/default/objects/EK_Sales360_Cache__c/fields/Generation_Source__c.field-meta.xml
<CustomField>
    <fullName>Generation_Source__c</fullName>
    <description>How this cache entry was generated. Used for telemetry and debugging.</description>
    <label>Generation Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APEX_FRESH</fullName>
                <default>true</default>
                <label>Apex Fresh Generation</label>
            </value>
            <value>
                <fullName>APEX_REFRESHED</fullName>
                <label>Apex Refreshed (post-expiry)</label>
            </value>
            <value>
                <fullName>MANUAL_REFRESH</fullName>
                <label>Manual User Refresh</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>