force-app/main/default/objects/EK_Sales360_Cache__c/fields/Generation_Time_Ms__c.field-meta.xml
<CustomField>
    <fullName>Generation_Time_Ms__c</fullName>
    <description>Time in milliseconds taken to generate this cache entry. Useful for performance telemetry.</description>
    <label>Generation Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>