force-app/main/default/objects/EK_Sales360_Cache__c/fields/Hit_Count__c.field-meta.xml
<CustomField>
    <fullName>Hit_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Incremented each time this cache entry is served. Useful for demo telemetry.</description>
    <label>Hit Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>