force-app/main/default/objects/EK_Sales360_Cache__c/fields/Is_Stale__c.field-meta.xml
<CustomField>
    <fullName>Is_Stale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows manual marking-as-stale without deleting the record. Preserves audit history.</description>
    <label>Is Stale</label>
    <type>Checkbox</type>
</CustomField>