force-app/main/default/objects/EK_Sales360_Cache__c/fields/JSON_Payload__c.field-meta.xml
<CustomField>
    <fullName>JSON_Payload__c</fullName>
    <description>The serialized JSON output from the Prompt Template or aggregation. Max 131,072 characters.</description>
    <label>JSON Payload</label>
    <length>131072</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>