force-app/main/default/objects/EK_Sales360_Cache__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <description>The type of cached response - determines which controller wrote it and which schema applies.</description>
    <label>Response Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MY_PERFORMANCE_KPI</fullName>
                <label>My Performance KPI</label>
            </value>
            <value>
                <fullName>PORTFOLIO_SUMMARY</fullName>
                <label>Portfolio Summary</label>
            </value>
            <value>
                <fullName>OPPORTUNITY_SPOTLIGHT</fullName>
                <label>Opportunity Spotlight</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>