force-app/main/default/objects/EK_Sales360_Cache__c/fields/Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Schema_Version__c</fullName>
    <defaultValue>"1.0"</defaultValue>
    <description>The JSON schema version (currently 1.0). Supports future schema evolution.</description>
    <label>Schema Version</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>