force-app/main/default/objects/EK_Sales360_Cache__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <description>The SF user ID who triggered the cache write (or the mapped owner ID for demo personas).</description>
    <externalId>true</externalId>
    <label>User Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>